--- a/View/RegisterView.xaml
+++ b/View/RegisterView.xaml
@@ -8,8 +8,34 @@
              xmlns:parkingApp="clr-namespace:ParkingApp"
              DataContext="{Binding Locator.Payment, Source={x:Static parkingApp:State.Instance}}">
     <StackPanel>
-        <Grid
-            Visibility="{Binding CurrentParking, Converter={StaticResource ValueToVisibilityConverter}, ConverterParameter='true', Source={x:Static parkingApp:State.Instance}}">
+
+        <Grid Visibility="{Binding CurrentParking, Converter={StaticResource ValueToVisibilityConverter}, ConverterParameter='false', Source={x:Static parkingApp:State.Instance}}">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <Label Grid.Row="0" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold"
+                   Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='REGISTER_PARKING_HEADER', Source={x:Static parkingApp:State.Instance}}" />
+
+            <Label Grid.Row="1" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold"
+                   Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='REGISTER_PARKING_PRICE', Source={x:Static parkingApp:State.Instance}}" />
+            <Label Grid.Row="2" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold"
+                   Content="{Binding Locator.Register.HourlyPrice, Source={x:Static parkingApp:State.Instance}}" />
+
+            <Button Grid.Row="3" Width="200"
+                    Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='BUTTON_REGISTER_PARKING', Source={x:Static parkingApp:State.Instance}}"
+                    Command="{Binding Locator.Register.RegisterParkingCommand, Source={x:Static parkingApp:State.Instance}}" />
+
+            <Button Grid.Row="4" Width="200"
+                    Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='BUTTON_CANCEL', Source={x:Static parkingApp:State.Instance}}"
+                    Command="{Binding Locator.Window.ChangeViewCommand, Source={x:Static parkingApp:State.Instance}}" CommandParameter="{x:Static enum:View.HOME}" />
+        </Grid>
+
+        <Grid Visibility="{Binding CurrentParking, Converter={StaticResource ValueToVisibilityConverter}, ConverterParameter='true', Source={x:Static parkingApp:State.Instance}}">
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
@@ -35,40 +61,9 @@
 
             <Button Grid.Row="5" Width="200"
                     Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='BUTTON_COMPLETE_PARKING', Source={x:Static parkingApp:State.Instance}}"
-                    Command="{Binding Locator.Window.ChangeViewCommand, Source={x:Static parkingApp:State.Instance}}" CommandParameter="{x:Static enum:View.PAYMENT}" />
-            
+                    Command="{Binding Locator.Register.CompleteParkingCommand, Source={x:Static parkingApp:State.Instance}}" />
+
             <Button Grid.Row="6" Width="200"
-                    Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='BUTTON_CANCEL', Source={x:Static parkingApp:State.Instance}}"
-                    Command="{Binding Locator.Window.ChangeViewCommand, Source={x:Static parkingApp:State.Instance}}" CommandParameter="{x:Static enum:View.HOME}" />
-
-
-            <!-- <TextBlock Grid.Row="1" Text="{Binding CurrentParking.Id, Source={x:Static parkingApp:State.Instance}}" /> -->
-            <!-- <TextBlock Grid.Row="2" Text="{Binding CurrentParking.TimeRegistered, Source={x:Static parkingApp:State.Instance}}" /> -->
-            <!-- <TextBlock Grid.Row="3" Text="{Binding CurrentParking.TimeCompleted, Source={x:Static parkingApp:State.Instance}}" /> -->
-        </Grid>
-
-        <Grid Visibility="{Binding CurrentParking, Converter={StaticResource ValueToVisibilityConverter}, ConverterParameter='false', Source={x:Static parkingApp:State.Instance}}">
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-
-            <Label Grid.Row="0" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold"
-                   Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='REGISTER_PARKING_HEADER', Source={x:Static parkingApp:State.Instance}}" />
-
-            <Label Grid.Row="1" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold"
-                   Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='REGISTER_PARKING_PRICE', Source={x:Static parkingApp:State.Instance}}" />
-            <Label Grid.Row="2" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold"
-                   Content="{Binding Locator.Register.HourlyPrice, Source={x:Static parkingApp:State.Instance}}" />
-
-            <Button Grid.Row="3" Width="200"
-                    Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='BUTTON_REGISTER_PARKING', Source={x:Static parkingApp:State.Instance}}"
-                    Command="{Binding Locator.Window.ChangeViewCommand, Source={x:Static parkingApp:State.Instance}}" CommandParameter="{x:Static enum:View.PAYMENT}" />
-            
-            <Button Grid.Row="4" Width="200"
                     Content="{Binding Locator.Window.CurrentLanguage, Converter={StaticResource TranslationConverter}, ConverterParameter='BUTTON_CANCEL', Source={x:Static parkingApp:State.Instance}}"
                     Command="{Binding Locator.Window.ChangeViewCommand, Source={x:Static parkingApp:State.Instance}}" CommandParameter="{x:Static enum:View.HOME}" />
         </Grid>
