--- a/View/HomeView.xaml
+++ b/View/HomeView.xaml
@@ -4,8 +4,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:helper="clr-namespace:ParkingApp.Helper"
              xmlns:parkingApp="clr-namespace:ParkingApp"
+             xmlns:userControls="clr-namespace:ParkingApp.UserControls"
              DataContext="{Binding Locator.Home, Source={x:Static parkingApp:State.Instance}}">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -61,7 +61,7 @@
         </Grid>
 
         <!-- Keyboard input element -->
-        <helper:KeyboardControl Grid.Row="3" Keyboard="{Binding Keyboard}" />
+        <userControls:KeyboardControl Grid.Row="3" Keyboard="{Binding Keyboard}" />
 
     </Grid>
 </UserControl>
